# SpeechJudgment

./: .gitignore  796.txt  CMakeLists.txt  README.md  main.cpp  main_all.cpp  main_filter.cpp  pitch.cpp  pitch.h  pitch_op.cpp  resample.h  support_functions.cpp
pitch/: support_functions.cpp  support_functions.h
webrtc/: checks.cc  checks.h  dot_product_with_scale.cc  spl_init.c  spl_inl.h  vad_core.c  vad_core.h  vad_filterbank.c  vad_gmm.c  vad_sp.c  webrtc_vad.c
